@@ -23,10 +23,12 @@ FIXES
 * Fixed bug with passive host checks being incorrectly sent to event brokers as active checks
 * Fixed bug where passive host check status updates were not being propagated to event brokers
 * Reverted 'Fix for retaining host display name and alias, as well as service display name' as configuration information stored incorrectly over a reload
+<<<<<<< HEAD
 * Fixed compile warnings for size_t (Michael Friedrich)
 * Fixed problem where acknowledgements were getting reset when a hard state change occurred
 * Removed duplicated unlinks for check result files with multiple results
 * Fixed race condition on flexible downtime commands when duration not set or zero (Michael Friedrich)
+* Fixed flexible downtime on service hard state change doesn't get triggered/activated (Michael Friedrich)
 
 WARNINGS
 
